loader and ag grid header overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -8719,13 +8719,9 @@ padding-bottom: 3px;
     }
   }
 }
-.report-listing-page {
-  .loader_container {
-    z-index: 1000;
-  }
-}
+
 .report-grid .ag-header-viewport {
-  z-index: 999;
+  z-index: 1;
 }
 .report-grid .ag-focus-managed,
 .report-grid .ag-column-hover,
@@ -8746,5 +8742,5 @@ padding-bottom: 3px;
 .report-grid .ag-pinned-right-header {
   overflow: hidden !important;
   background: #fff;
-  z-index: 999;
+  z-index: 1;
 }
